--- a/app.html
+++ b/app.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/pages/music.css">
     <link rel="stylesheet" href="css/pages/timer.css">
-    <link rel="stylesheet" href="css/pages/ai.css">
+    <link rel="stylesheet" href="css/pages/Calendar.css">
     <link rel="stylesheet" href="css/pages/stats.css">
     <link rel="stylesheet" href="css/pages/sounds.css">
     <link rel="stylesheet" href="css/pages/focus.css">
@@ -42,7 +42,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-page="ai">
+                <a class="nav-link" data-page="calendar">
                     <span class="nav-icon">🧠</span>
                     <span>Calendario Smart</span>
                 </a>
@@ -839,7 +839,7 @@
 <script src="js/navigation.js"></script>
 <script src="js/pages/music.js"></script>
 <script src="js/pages/timer.js"></script>
-<script src="js/pages/ai.js"></script>
+<script src="js/pages/Calendar.js"></script>
 <script src="js/pages/stats.js"></script>
 <script src="js/pages/sounds.js"></script>
 <script src="js/pages/focus.js"></script>
