--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Flowmind - Trova il tuo ritmo, conquista il tuo tempo</title>
     <link rel="stylesheet" href="css/landing.css">
     <script src="js/landing.js"></script>
+    <script src="js/auth.js"></script>
 </head>
 
 <body>
