--- a/app.html
+++ b/app.html
@@ -219,9 +219,8 @@
                 </div>
             </div>
         </div>
-
         <!-- AI Calendar Page -->
-        <div class="page" id="ai-page">
+        <div class="page" id="calendar-page">
             <div class="page-header">
                 <div>
                     <button class="menu-toggle" onmousedown="window.toggleSidebar(); return false;">☰</button>
@@ -233,6 +232,7 @@
                     </div>
                 </div>
             </div>
+
 
             <!-- Quick Add Task -->
             <div class="card">
@@ -457,7 +457,7 @@
                     </div>
                 </div>
             </div>
-
+        </div>
         <!-- Student Plan Page -->
         <div class="page" id="student-page">
             <div class="page-header">
