fix sidebar button for mobile

--- a/app.html
+++ b/app.html
@@ -223,7 +223,8 @@
         <div class="page" id="calendar-page">
             <div class="page-header">
                 <div>
-                    <button class="menu-toggle" onmousedown="window.toggleSidebar(); return false;">☰</button>
+                    <button class="menu-toggle"
+                        onclick="document.getElementById('sidebar').classList.toggle('visible')">☰</button>
                     <div class="page-title">
                         <h1>🧠 Calendario Intelligente</h1>
                         <p class="page-subtitle">
@@ -462,7 +463,8 @@
         <div class="page" id="student-page">
             <div class="page-header">
                 <div>
-                    <button class="menu-toggle" onmousedown="window.toggleSidebar(); return false;">☰</button>
+                    <button class="menu-toggle"
+                        onclick="document.getElementById('sidebar').classList.toggle('visible')">☰</button>
                     <div class="page-title">
                         <h1>🎓 Piano Studente Pro</h1>
                         <p class="page-subtitle">
